# netsecurity-mlops

./: .dockerignore  .gitignore  DockerFile  Dockerfile  README.md  app.py  push_data.py  pyproject.toml
.github/workflows/: main.yml
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
networksecurity/constants/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: logger.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
templates/: index.html  table.html
