[build-system]
requires = ["setuptools >= 77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net-sec"
version = "0.0.1"
description = "Network Security Project"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  { name = "Ananthakrishnan K", email = "ananthakrishnan073@gmail.com" }
]

dependencies = [
  "python-dotenv",
  "pandas",
  "numpy",
  "pymongo[srv]==4.13.1",
  "certifi",
  "scikit-learn",
  "dill",
  "pyyaml",
  "mlflow==2.3.2",
  "dagshub",
  "fastapi",
  "uvicorn",
  "python-multipart"
]

[tool.setuptools]
package-dir = {"" = "networksecurity"}

[tool.setuptools.packages.find]
where = ["networksecurity"]
